<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyCodeActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pageClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/login_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loginIcon"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/login_logo_no_padding"
        android:tint="@color/login_logo_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/login_sign_to_chative"
        android:textColor="@color/t.primary"
        android:textSize="@dimen/login_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginIcon" />

    <TextView
        android:id="@+id/loginHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_otp_sent"
        android:textColor="@color/t.secondary"
        android:textSize="@dimen/login_hint_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <LinearLayout
        android:id="@+id/inputZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginHint">

        <com.difft.android.base.widget.VerifyCodeView
            android:id="@+id/emailCodeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="49dp">

            <requestFocus />
        </com.difft.android.base.widget.VerifyCodeView>

        <TextView
            android:id="@+id/errorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="49dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:textColor="@color/t.error"
            android:textSize="@dimen/login_hint_size"
            android:visibility="gone"
            tools:text="@string/login_invite_code_invalid"
            tools:visibility="visible" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/handleZone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_handle_zone_bg"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputZone">

        <Button
            android:id="@+id/nextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/login_next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/login_next_size" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_fileName="login_loading_anim.json"
            app:lottie_loop="true"
            tools:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/emailNotReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_email_code_not_receive"
        android:textColor="@color/t.primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/resendEmail"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/handleZone" />

    <TextView
        android:id="@+id/resendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:text="@string/login_email_code_resend"
        android:textColor="@color/login_blue_one"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/emailNotReceived"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailNotReceived"
        app:layout_constraintTop_toTopOf="@+id/emailNotReceived" />
</androidx.constraintlayout.widget.ConstraintLayout>