<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loginIcon"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/login_logo_with_name"
            android:tint="@color/login_logo_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <TextView-->
        <!--            android:id="@+id/loginTitle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:text="@string/app_name"-->
        <!--            android:textColor="@color/t.primary"-->
        <!--            android:textSize="@dimen/login_title_size"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/loginIcon" />-->

        <LinearLayout
            android:id="@+id/inputZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginIcon">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/invite_uid_border"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_phone_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ps_ic_default_arrow"
                        android:drawablePadding="3dp"
                        android:textColor="@color/t.primary"
                        android:textSize="14sp"
                        app:drawableTint="@color/icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="+86" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/line"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_phone_code"
                        app:layout_constraintStart_toEndOf="@+id/tv_phone_code"
                        app:layout_constraintTop_toTopOf="@+id/tv_phone_code" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.difft.android.base.widget.RuleEditText
                    android:id="@+id/account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/account_input_clear_icon"
                    android:gravity="start|center_vertical"
                    android:hint="@string/login_email_or_invite_code_hint"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/t.primary"
                    android:textColorHint="@color/t.disable"
                    android:textSize="14sp"
                    app:clearable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cl_phone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginStart="0dp"
                    app:rule="not_empty">

                    <!--                    <requestFocus />-->
                </com.difft.android.base.widget.RuleEditText>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/errorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="start|center_vertical"
                android:lineSpacingExtra="3sp"
                android:maxLines="3"
                android:textColor="@color/login_red_one"
                android:textSize="@dimen/login_hint_size"
                android:visibility="gone"
                tools:text="@string/login_invite_code_invalid"
                tools:visibility="visible" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/handleZone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_handle_zone_bg"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputZone">

            <Button
                android:id="@+id/nextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/login_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/login_next_size" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_fileName="login_loading_anim.json"
                app:lottie_loop="true"
                tools:visibility="visible" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/handleZone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_new_user"
                android:textColor="@color/t.secondary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_sign_up"
                android:textColor="@color/t.info"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_new_user"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>